force-app/main/default/objects/Channel_Partner__c/Channel_Partner__c.object-meta.xml
<CustomObject>
    <label>Channel Partner</label>
    <nameField>
        <label>Channel Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>