force-app/main/default/objects/Channel_Partner__c/fields/Appx_Display_Space_They_Own_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Appx_Display_Space_They_Own_Sqft__c</fullName>
    <label>Appx Display Space They Own (----Sqft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>