force-app/main/default/objects/Channel_Partner__c/fields/Cluster_Head__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Head__c</fullName>
    <label>Cluster Head</label>
    <length>255</length>
    <type>Text</type>
</CustomField>