force-app/main/default/objects/Channel_Partner__c/fields/Company_Location__c.field-meta.xml
<CustomField>
    <fullName>Company_Location__c</fullName>
    <label>Company Location</label>
    <type>TextArea</type>
</CustomField>