force-app/main/default/objects/Channel_Partner__c/fields/CP_Code__c.field-meta.xml
<CustomField>
    <fullName>CP_Code__c</fullName>
    <displayFormat>WCP-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>CP Code</label>
    <type>AutoNumber</type>
</CustomField>