force-app/main/default/objects/Channel_Partner__c/fields/Display_Size_can_be_given_to_Westeam__c.field-meta.xml
<CustomField>
    <fullName>Display_Size_can_be_given_to_Westeam__c</fullName>
    <label>Display Size can be given to Westeam</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Display__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Display_Size_can_be_given_to_Westeam</valueSetName>
    </valueSet>
</CustomField>