force-app/main/default/objects/Channel_Partner__c/fields/Existing_Business_experience_in_this_Ind__c.field-meta.xml
<CustomField>
    <fullName>Existing_Business_experience_in_this_Ind__c</fullName>
    <inlineHelpText>Existing Business experience in this Industry or Different</inlineHelpText>
    <label>Existing Business experience in this Ind</label>
    <type>TextArea</type>
</CustomField>