force-app/main/default/objects/Channel_Partner__c/fields/Exiting_Business__c.field-meta.xml
<CustomField>
    <fullName>Exiting_Business__c</fullName>
    <label>Exiting Business</label>
    <type>TextArea</type>
</CustomField>