force-app/main/default/objects/Channel_Partner__c/fields/Looking_for_Wesmarc_dealership__c.field-meta.xml
<CustomField>
    <fullName>Looking_for_Wesmarc_dealership__c</fullName>
    <inlineHelpText>Looking for Wesmarc dealership, requesting to brief the T&amp;C to proceed further</inlineHelpText>
    <label>Looking for Wesmarc dealership</label>
    <type>TextArea</type>
</CustomField>