force-app/main/default/objects/Channel_Partner__c/fields/Showroom_Address__c.field-meta.xml
<CustomField>
    <fullName>Showroom_Address__c</fullName>
    <label>Showroom Address</label>
    <type>TextArea</type>
</CustomField>