force-app/main/default/objects/Channel_Partner__c/fields/State_Head__c.field-meta.xml
<CustomField>
    <fullName>State_Head__c</fullName>
    <label>State Head</label>
    <length>255</length>
    <type>Text</type>
</CustomField>