force-app/main/default/objects/Channel_Partner__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarded</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
                <isActive>false</isActive>
                <label>Prospect</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>