force-app/main/default/objects/Channel_Partner__c/fields/Tentative_Date_of_Lead_Closure__c.field-meta.xml
<CustomField>
    <fullName>Tentative_Date_of_Lead_Closure__c</fullName>
    <label>Tentative Date of Lead Closure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tentative_Date_of_Lead_Closure</valueSetName>
    </valueSet>
</CustomField>