force-app/main/default/objects/Channel_Partner__c/fields/Turnover__c.field-meta.xml
<CustomField>
    <fullName>Turnover__c</fullName>
    <label>Turnover</label>
    <length>255</length>
    <type>Text</type>
</CustomField>