force-app/main/default/objects/Channel_Partner__c/fields/Type_of_Display__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Display__c</fullName>
    <label>Type of Display</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Display</valueSetName>
    </valueSet>
</CustomField>