force-app/main/default/objects/Channel_Partner__c/fields/Wesmarc_Factory_Visit__c.field-meta.xml
<CustomField>
    <fullName>Wesmarc_Factory_Visit__c</fullName>
    <label>Wesmarc Factory Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Wesmarc_Factory_Visit</valueSetName>
    </valueSet>
</CustomField>