force-app/main/default/objects/Channel_Partner__c/fields/Wesmarc_Factory_Visit_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Wesmarc_Factory_Visit_Remarks__c</fullName>
    <label>Wesmarc Factory Visit Remarks</label>
    <type>TextArea</type>
</CustomField>