force-app/main/default/objects/Channel_Partner__c/fields/Where_they_got_to_know_about_us__c.field-meta.xml
<CustomField>
    <fullName>Where_they_got_to_know_about_us__c</fullName>
    <label>Where they got to know about us</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Where_they_got_to_know_about_us</valueSetName>
    </valueSet>
</CustomField>