force-app/main/default/objects/Channel_Partner__c/fields/Years_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Years_in_Business__c</fullName>
    <label>Years in Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>