force-app/main/default/objects/Channel_Partner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CP_Code__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Type_of_Display__c</columns>
    <columns>Wesmarc_Factory_Visit__c</columns>
    <columns>Where_they_got_to_know_about_us__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>