force-app/main/default/objects/Channel_Partner__c/listViews/On_Boarded_CP.listView-meta.xml
<ListView>
    <fullName>On_Boarded_CP</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CP_Code__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Type_of_Display__c</columns>
    <columns>Wesmarc_Factory_Visit__c</columns>
    <columns>Where_they_got_to_know_about_us__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Onboarded</value>
    </filters>
    <label>On Boarded CP</label>
</ListView>